# PAMELA

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  NOTICE  README.md
PAMELA/: CMakeLists.txt
PAMELA/source/: CMakeLists.txt  PAMELA.hpp
PAMELA/source/Adjacency/: Adjacency.cpp  Adjacency.hpp  AdjacencySet.cpp  AdjacencySet.hpp  CSRGraph.hpp  CSRMatrix.cpp  CSRMatrix.hpp  TopologicalAdjacency.cpp  TopologicalAdjacency.hpp
PAMELA/source/Collection/: Collection.cpp  Collection.hpp  ElementEnsemble.hpp  Ensemble.hpp  GroupInfo.hpp  Indexing.hpp
PAMELA/source/Elements/: Element.hpp  ElementFactory.cpp  ElementFactory.hpp  Line.hpp  Point.hpp  Polygon.hpp  Polyhedron.hpp
PAMELA/source/Import/: Eclipse_mesh.cpp  Eclipse_mesh.hpp  Gmsh_mesh.cpp  Gmsh_mesh.hpp  INRIA_mesh.cpp  INRIA_mesh.hpp
PAMELA/source/Mesh/: CartesianMesh.cpp  CartesianMesh.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  UnstructuredMesh.hpp
PAMELA/source/MeshDataWriters/: .Variable.hpp.swp  EnsightGoldWriter.cpp  EnsightGoldWriter.hpp  MeshDataWriter.cpp  MeshDataWriter.hpp  MeshDataWriterFactory.cpp  MeshDataWriterFactory.hpp  MeshParts.cpp  MeshParts.hpp  Part.hpp  VTKWriter.cpp  VTKWriter.hpp  Variable.hpp  Writer.hpp
PAMELA/source/Parallel/: Communicator.cpp  Communicator.hpp  ParallelEnsemble.hpp
PAMELA/source/Property/: Property.hpp
PAMELA/source/Utils/: .Communicator.hpp.swp  Assert.hpp  Binary.hpp  Communicator.cpp  Communicator.hpp  File.cpp  File.hpp  HashMap.hpp  LogMessage.cpp  LogMessage.hpp  Logger.cpp  Logger.hpp  Range.hpp  Resource.hpp  SimpleMaths.hpp  Statistics.cpp  Statistics.hpp  StringUtils.cpp  StringUtils.hpp  Types.hpp  Utils.hpp  VectorUtils.cpp  VectorUtils.hpp
cmake/: FindMETIS.cmake  FindPAMELA.cmake  PAMELA.cmake  tpls.cmake
data/eclipse/Johansen/: FULLFIELD_FAULTS_IMAXJMAX.INC  FULLFIELD_IMAXJMAX.rsinit  FULLFIELD_IMAXJMAX.tecinit
data/eclipse/Norne/GRID/: IRAP_1005.rsinit
data/eclipse/OW2P-MUFITS/: OW2P-RT.PERMX  OW2P-RT.PORO  OW2P-RT.rsgrid  OW2P-RT.rsgridi
data/eclipse/ReducedNorne/: IRAP_1005.rsgrid
data/eclipse/SPE9/: .directory  SPE9.EGRID  SPE9.INIT  SPE9.UNRST
data/eclipse/SPE9/EclipseDeck/: .directory  SPE9.DATA
data/eclipse/Slice/: IX_SLICE326SMALL_REF_NOFREEZEPC_TUN_ACTNUM_FLAT.EGRID  IX_SLICE326SMALL_REF_NOFREEZEPC_TUN_ACTNUM_FLAT.INIT
data/eclipse/ZIPPY/: ZIPPY.DATA
data/eclipse/spe10/: .directory
data/eclipse/spe10/EclipseDeck/: .directory  SPE10.DATA
data/gmsh/: BoxWithFracs.msh  THM.msh  beam_with_data.msh  mesh.msh  modelA1_volume_meshed.msh
data/medit/: final_very_coarse.mesh  small.mesh  tiny.mesh  trivial.mesh
examples/: CMakeLists.txt  CmakeLists.txt
examples/Cartesian Mesh/: CMakeLists.txt  cartesian_grid.cart  main.cpp
examples/CartesianGrid/: CMakeLists.txt  main.cpp
examples/ECLIPSE Mesh/: CMakeLists.txt  main.cpp
examples/ECLIPSE Mesh EGRID/: CMakeLists.txt  main.cpp
examples/ECLIPSE Mesh GRDECL/: CMakeLists.txt  main.cpp
examples/ECLIPSE Mesh/Norne/GRID/: IRAP_1005.tecinit
examples/ECLIPSE Mesh/OW2P-MUFITS/: OW2P-RT.GRDECL
examples/ECLIPSE Mesh/SAIGUP/: SAIGUP.GRDECL
examples/ECLIPSE Mesh/SPE9/: SPE9.GRDECL
examples/EclipseMeshEGRID/: CMakeLists.txt  main.cpp
examples/EclipseMeshGRDECL/: CMakeLists.txt  main.cpp
examples/GMSH Unstructured Mesh/: BoxWithFracs.msh  CMakeLists.txt  THM.msh  main.cpp
examples/GMSHUnstructuredMesh/: CMakeLists.txt  main.cpp
examples/INRIA Unstructured Mesh/: CMakeLists.txt  main.cpp  trivial  trivial.msh
examples/INRIAUnstructuredMesh/: CMakeLists.txt  main.cpp
examples/executable/: CMakeLists.txt  command_parser.hpp  pamela.cpp
executable/: CMakeLists.txt  pamela.cpp
tests/: CMakeLists.txt  big.cpp  main.cpp  medium.cpp  runtest.cmake  small.cpp  small.txt  test_io.h  tests_config.h.in
tests/small_mesh/reference/: Unstructured_Mesh.geo
tests/spe10_one_layer/reference/: Unstructured_Mesh.case
tests/tiny_mesh/reference/: Unstructured_Mesh.geo
tests/trivial/: trivial.mesh
tests/very_coarse_mesh/reference/: Unstructured_Mesh.case  Unstructured_Mesh.geo
